force-app/main/default/objects/CityCentroid__c/CityCentroid__c.object-meta.xml
<CustomObject>
    <description>Stores the geographic centroid coordinates and population of the 200 largest US cities.</description>
    <label>City Centroid</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>City Centroid Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>City Centroids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>