force-app/main/default/objects/CityCentroid__c/fields/LatCentroid__c.field-meta.xml
<CustomField>
    <fullName>LatCentroid__c</fullName>
    <label>Lat Centroid</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>