force-app/main/default/objects/CityCentroid__c/fields/LongCentroid__c.field-meta.xml
<CustomField>
    <fullName>LongCentroid__c</fullName>
    <label>Long Centroid</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>