force-app/main/default/objects/CityCentroid__c/fields/Population__c.field-meta.xml
<CustomField>
    <fullName>Population__c</fullName>
    <label>Population</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>